# edupractica-api

./: .env.example  .gitignore  AGENTS.md  README.md  check_sa.py  create_test_students.py  debug_db.py  debug_schema.py  export_openapi.py  fix_migration.py  fix_migration_v2.py  init_db.py  list_cols.py  list_cols_v2.py  migrate_add_role.py  migrate_db.py  populate_analytics.py  populate_stages.py  postman_collection.json  pyproject.toml  requirements.txt  sql_app.db  test_pending.py  test_ser.py  update_db.py  vercel.json  verify_categories.py
.vibe/: README.md
.vibe/docs/: ARCHITECTURE_FIXES.md  DEBUGGING_LOGS.md  MIGRATION_CLEANUP.md  MIGRATION_GUIDE.md  PROJECT_STATUS.md
app/: main.py
app/api/: deps.py
app/api/endpoints/: __init__.py  analytics.py  categories.py  feedback.py  login.py  media.py  oauth.py  stages.py  topics.py  transfer.py  users.py
app/core/: config.py  media.py  security.py  supabase_client.py
app/crud/: __init__.py  crud_category.py  crud_feedback.py  crud_stage.py  crud_topic.py  crud_transfer.py  crud_user.py
app/db/: session.py
app/models/: __init__.py  audit.py  category.py  feedback.py  stage.py  topic.py  transfer.py  user.py
app/schemas/: __init__.py  category.py  feedback.py  interactive.py  stage.py  token.py  topic.py  transfer.py  user.py
app/services/: analytics.py
app/static/admin/: categories.html
docs/: auth.md  categories.md  category_detail_examples.md  feedback.md  interactive_challenges.md  sistema_general_edupractica.md  sistema_general_presentacion.md  stage_approval.md  stages.md  topics.md  users.md
